Give `get_workspace()` a better implementation
